--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,31 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
+    <style name="AppTheme" parent="@android:style/Theme.Holo.Light" />
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="defaultTextView" parent="@android:style/TextAppearance.Medium">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="frag1TableLayout">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="frag1HeaderTableRow" parent="frag1TableLayout">
+        <item name="android:layout_marginBottom">3dp</item>
+    </style>
+
+    <style name="frag1TableRow" parent="frag1TableLayout">
+    </style>
+
+    <style name="frag1Col" parent="defaultTextView">
+        <item name="android:layout_marginBottom">1dp</item>
+        <item name="android:background">@drawable/tableborder_jeu</item>
+    </style>
+
+
+    <style name="frag1HeaderCol" parent="frag1Col">
+        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
