--- a/app/src/main/res/layout/activity_game_launcher.xml
+++ b/app/src/main/res/layout/activity_game_launcher.xml
@@ -89,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Créer partie"
-        android:id="@+id/button"
+        android:id="@+id/buttonCreateGame"
         android:layout_below="@+id/buttonJoinGame"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
