--- a/app/src/main/res/layout/activity_select_device_to_connect.xml
+++ b/app/src/main/res/layout/activity_select_device_to_connect.xml
@@ -35,6 +35,7 @@
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="40dp"
+        android:background="#ffffffff" />
 
 </RelativeLayout>
