--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#ff222222"
-    tools:context="com.example.jdebat.andromind.GameActivity">
+    tools:context="com.example.jdebat.andromind.GameActivity"
+    android:id="@+id/">
 
     <TableLayout style="@style/frag1TableLayout"
         android:id="@+id/tableLayout_jeu"
@@ -136,7 +137,9 @@
         android:background="#ffff8400"
         android:textSize="15dp"
         android:textStyle="bold"
-        android:height="20dp"/>
+        android:height="40dp"
+        android:enabled="false"
+        android:width="100dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -147,10 +150,62 @@
         android:background="#ffed150c"
         android:textSize="15dp"
         android:textStyle="bold"
-        android:height="20dp"
+        android:height="40dp"
         android:layout_above="@+id/buttonValiderLigne"
         android:layout_alignLeft="@+id/buttonValiderLigne"
         android:layout_alignStart="@+id/buttonValiderLigne"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="10dp"
+        android:width="100dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Bien placés"
+        android:id="@+id/textView4"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/buttonClearLigne"
+        android:layout_alignStart="@+id/buttonClearLigne"
+        android:textColor="#ffffffff"
+        android:textSize="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Mal placés"
+        android:id="@+id/textView5"
+        android:textColor="#ffffffff"
+        android:textSize="20dp"
+        android:layout_marginTop="73dp"
+        android:layout_below="@+id/textView4"
+        android:layout_alignLeft="@+id/textView4"
+        android:layout_alignStart="@+id/textView4" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:id="@+id/textViewBp"
+        android:textSize="40dp"
+        android:textColor="#ffffffff"
+        android:layout_alignRight="@+id/textView4"
+        android:layout_alignEnd="@+id/textView4"
+        android:layout_below="@+id/textView4"
+        android:layout_alignLeft="@+id/textView4"
+        android:layout_alignStart="@+id/textView4" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:id="@+id/textViewMp"
+        android:textSize="40dp"
+        android:textColor="#ffffffff"
+        android:layout_below="@+id/textView5"
+        android:layout_alignRight="@+id/textView5"
+        android:layout_alignEnd="@+id/textView5"
+        android:layout_alignLeft="@+id/textView5"
+        android:layout_alignStart="@+id/textView5" />
 
 </RelativeLayout>
