--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,8 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#ff222222"
-    tools:context="com.example.jdebat.andromind.GameActivity"
-    android:id="@+id/">
+    tools:context="com.example.jdebat.andromind.GameActivity">
 
     <TableLayout style="@style/frag1TableLayout"
         android:id="@+id/tableLayout_jeu"
